[gd_scene load_steps=105 format=2]

[ext_resource path="res://Minigame/Wire.gd" type="Script" id=1]
[ext_resource path="res://Minigame/Sprites/Minigame_UI_V2_SCALED.png" type="Texture" id=2]
[ext_resource path="res://Minigame/Sprites/Minigame_UI_SCALED.png" type="Texture" id=3]
[ext_resource path="res://Minigame/Sprites/deactivedred.png" type="Texture" id=4]
[ext_resource path="res://Minigame/Sprites/WIRE_SCALED.png" type="Texture" id=5]
[ext_resource path="res://Minigame/Sprites/Slot_RED_SCALED.png" type="Texture" id=6]
[ext_resource path="res://Minigame/Sprites/Slot_GREEN_SCALED.png" type="Texture" id=7]
[ext_resource path="res://Minigame/Sprites/Slot_BLUE_SCALED.png" type="Texture" id=8]
[ext_resource path="res://Minigame/Sprites/deactivedgreen.png" type="Texture" id=9]
[ext_resource path="res://Minigame/Sprites/deactivedblue.png" type="Texture" id=10]
[ext_resource path="res://Minigame/Minigame.gd" type="Script" id=11]
[ext_resource path="res://Minigame/Port.gd" type="Script" id=12]
[ext_resource path="res://Minigame/Sprites/jammerlines.png" type="Texture" id=14]

[sub_resource type="AtlasTexture" id=91]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 192, 192 )

[sub_resource type="AtlasTexture" id=92]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 192, 0, 192, 192 )

[sub_resource type="AtlasTexture" id=93]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 384, 0, 192, 192 )

[sub_resource type="AtlasTexture" id=94]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 576, 0, 192, 192 )

[sub_resource type="AtlasTexture" id=95]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 768, 0, 192, 192 )

[sub_resource type="AtlasTexture" id=96]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 960, 0, 192, 192 )

[sub_resource type="AtlasTexture" id=97]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 1152, 0, 192, 192 )

[sub_resource type="AtlasTexture" id=98]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 1344, 0, 192, 192 )

[sub_resource type="AtlasTexture" id=99]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 192, 192, 192 )

[sub_resource type="AtlasTexture" id=100]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 192, 192, 192, 192 )

[sub_resource type="AtlasTexture" id=101]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 384, 192, 192, 192 )

[sub_resource type="AtlasTexture" id=102]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 576, 192, 192, 192 )

[sub_resource type="AtlasTexture" id=103]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 768, 192, 192, 192 )

[sub_resource type="AtlasTexture" id=104]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 960, 192, 192, 192 )

[sub_resource type="AtlasTexture" id=105]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 1152, 192, 192, 192 )

[sub_resource type="AtlasTexture" id=106]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 1344, 192, 192, 192 )

[sub_resource type="AtlasTexture" id=107]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 384, 192, 192 )

[sub_resource type="AtlasTexture" id=108]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 192, 384, 192, 192 )

[sub_resource type="AtlasTexture" id=109]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 384, 384, 192, 192 )

[sub_resource type="AtlasTexture" id=110]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 576, 384, 192, 192 )

[sub_resource type="AtlasTexture" id=111]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 768, 384, 192, 192 )

[sub_resource type="AtlasTexture" id=112]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 960, 384, 192, 192 )

[sub_resource type="AtlasTexture" id=113]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 1152, 384, 192, 192 )

[sub_resource type="AtlasTexture" id=114]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 1344, 384, 192, 192 )

[sub_resource type="AtlasTexture" id=115]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=116]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 96, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=117]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 192, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=118]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 288, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=119]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 384, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=120]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 480, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=121]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 576, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=122]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 672, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=123]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 96, 96, 96 )

[sub_resource type="AtlasTexture" id=124]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 96, 96, 96, 96 )

[sub_resource type="AtlasTexture" id=125]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 192, 96, 96, 96 )

[sub_resource type="AtlasTexture" id=126]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 288, 96, 96, 96 )

[sub_resource type="AtlasTexture" id=127]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 384, 96, 96, 96 )

[sub_resource type="AtlasTexture" id=128]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 480, 96, 96, 96 )

[sub_resource type="AtlasTexture" id=129]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 576, 96, 96, 96 )

[sub_resource type="AtlasTexture" id=130]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 672, 96, 96, 96 )

[sub_resource type="SpriteFrames" id=131]
animations = [ {
"frames": [ SubResource( 91 ), SubResource( 92 ), SubResource( 93 ), SubResource( 94 ), SubResource( 95 ), SubResource( 96 ), SubResource( 97 ), SubResource( 98 ), SubResource( 99 ), SubResource( 100 ), SubResource( 101 ), SubResource( 102 ), SubResource( 103 ), SubResource( 104 ), SubResource( 105 ), SubResource( 106 ), SubResource( 107 ), SubResource( 108 ), SubResource( 109 ), SubResource( 110 ), SubResource( 111 ), SubResource( 112 ), SubResource( 113 ), SubResource( 114 ) ],
"loop": true,
"name": "default",
"speed": 12.0
}, {
"frames": [ SubResource( 115 ), SubResource( 116 ), SubResource( 117 ), SubResource( 118 ), SubResource( 119 ), SubResource( 120 ), SubResource( 121 ), SubResource( 122 ), SubResource( 123 ), SubResource( 124 ), SubResource( 125 ), SubResource( 126 ), SubResource( 127 ), SubResource( 128 ), SubResource( 129 ), SubResource( 130 ) ],
"loop": true,
"name": "old",
"speed": 12.0
} ]

[sub_resource type="AtlasTexture" id=132]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=133]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=134]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=135]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=136]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 256, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=137]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 320, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=138]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 384, 0, 64, 64 )

[sub_resource type="SpriteFrames" id=139]
animations = [ {
"frames": [ SubResource( 132 ), SubResource( 133 ), SubResource( 134 ), SubResource( 135 ), SubResource( 136 ), SubResource( 137 ), SubResource( 138 ) ],
"loop": true,
"name": "default",
"speed": 7.0
} ]

[sub_resource type="CircleShape2D" id=140]
radius = 7.5

[sub_resource type="AtlasTexture" id=141]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=142]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=143]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=144]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=145]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 256, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=146]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 320, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=147]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 384, 0, 64, 64 )

[sub_resource type="SpriteFrames" id=148]
animations = [ {
"frames": [ SubResource( 141 ), SubResource( 142 ), SubResource( 143 ), SubResource( 144 ), SubResource( 145 ), SubResource( 146 ), SubResource( 147 ) ],
"loop": true,
"name": "default",
"speed": 14.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "deactivated",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=149]
radius = 8.0

[sub_resource type="AtlasTexture" id=150]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=151]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=152]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=153]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=154]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 256, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=155]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 320, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=156]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 384, 0, 64, 64 )

[sub_resource type="SpriteFrames" id=157]
animations = [ {
"frames": [ SubResource( 150 ), SubResource( 151 ), SubResource( 152 ), SubResource( 153 ), SubResource( 154 ), SubResource( 155 ), SubResource( 156 ) ],
"loop": true,
"name": "default",
"speed": 14.0
}, {
"frames": [ ExtResource( 10 ) ],
"loop": true,
"name": "deactivated",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=158]
radius = 8.0

[sub_resource type="AtlasTexture" id=159]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=160]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=161]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=162]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=163]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 256, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=164]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 320, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=165]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 384, 0, 64, 64 )

[sub_resource type="SpriteFrames" id=166]
animations = [ {
"frames": [ SubResource( 159 ), SubResource( 160 ), SubResource( 161 ), SubResource( 162 ), SubResource( 163 ), SubResource( 164 ), SubResource( 165 ) ],
"loop": true,
"name": "default",
"speed": 14.0
}, {
"frames": [ ExtResource( 9 ) ],
"loop": true,
"name": "deactivated",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=167]
radius = 8.0

[sub_resource type="AtlasTexture" id=78]
flags = 4
atlas = ExtResource( 14 )
region = Rect2( 0, 0, 192, 192 )

[sub_resource type="AtlasTexture" id=79]
flags = 4
atlas = ExtResource( 14 )
region = Rect2( 192, 0, 192, 192 )

[sub_resource type="AtlasTexture" id=80]
flags = 4
atlas = ExtResource( 14 )
region = Rect2( 384, 0, 192, 192 )

[sub_resource type="AtlasTexture" id=81]
flags = 4
atlas = ExtResource( 14 )
region = Rect2( 576, 0, 192, 192 )

[sub_resource type="AtlasTexture" id=82]
flags = 4
atlas = ExtResource( 14 )
region = Rect2( 768, 0, 192, 192 )

[sub_resource type="AtlasTexture" id=83]
flags = 4
atlas = ExtResource( 14 )
region = Rect2( 960, 0, 192, 192 )

[sub_resource type="AtlasTexture" id=84]
flags = 4
atlas = ExtResource( 14 )
region = Rect2( 1152, 0, 192, 192 )

[sub_resource type="AtlasTexture" id=85]
flags = 4
atlas = ExtResource( 14 )
region = Rect2( 1344, 0, 192, 192 )

[sub_resource type="AtlasTexture" id=86]
flags = 4
atlas = ExtResource( 14 )
region = Rect2( 1536, 0, 192, 192 )

[sub_resource type="AtlasTexture" id=87]
flags = 4
atlas = ExtResource( 14 )
region = Rect2( 1728, 0, 192, 192 )

[sub_resource type="AtlasTexture" id=88]
flags = 4
atlas = ExtResource( 14 )
region = Rect2( 1920, 0, 192, 192 )

[sub_resource type="AtlasTexture" id=89]
flags = 4
atlas = ExtResource( 14 )
region = Rect2( 2112, 0, 192, 192 )

[sub_resource type="AtlasTexture" id=90]
flags = 4
atlas = ExtResource( 14 )
region = Rect2( 2304, 0, 192, 192 )

[sub_resource type="SpriteFrames" id=168]
animations = [ {
"frames": [ SubResource( 78 ), SubResource( 79 ), SubResource( 80 ), SubResource( 81 ), SubResource( 82 ), SubResource( 83 ), SubResource( 84 ), SubResource( 85 ), SubResource( 86 ), SubResource( 87 ), SubResource( 88 ), SubResource( 89 ), SubResource( 90 ) ],
"loop": true,
"name": "default",
"speed": 30.0
} ]

[node name="Main" type="Node2D"]
scale = Vector2( 0.5, 0.5 )
script = ExtResource( 11 )

[node name="Background" type="AnimatedSprite" parent="."]
position = Vector2( 2527.5, 1087.5 )
scale = Vector2( 3.66146, 3.66146 )
z_index = -2
frames = SubResource( 131 )

[node name="whitePort" type="Area2D" parent="."]
position = Vector2( 2528, 1088 )
script = ExtResource( 12 )
__meta__ = {
"_edit_group_": true
}
nodeColor = "white"
nodeRing = "center"

[node name="Sprite" type="AnimatedSprite" parent="whitePort"]
scale = Vector2( 2.5, 2.5 )
frames = SubResource( 139 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="whitePort"]
scale = Vector2( 10, 10 )
shape = SubResource( 140 )

[node name="redPort" type="Area2D" parent="." groups=[
"innerNodes",
]]
position = Vector2( 2688, 1180 )
script = ExtResource( 12 )
__meta__ = {
"_edit_group_": true
}
nodeColor = "red"

[node name="Sprite" type="AnimatedSprite" parent="redPort"]
scale = Vector2( 2.5, 2.5 )
frames = SubResource( 148 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="redPort"]
scale = Vector2( 10, 10 )
shape = SubResource( 149 )

[node name="bluePort" type="Area2D" parent="." groups=[
"innerNodes",
]]
position = Vector2( 2364, 1178 )
script = ExtResource( 12 )
__meta__ = {
"_edit_group_": true
}
nodeColor = "blue"

[node name="Sprite" type="AnimatedSprite" parent="bluePort"]
scale = Vector2( 2.5, 2.5 )
frames = SubResource( 157 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="bluePort"]
scale = Vector2( 10, 10 )
shape = SubResource( 158 )

[node name="greenPort" type="Area2D" parent="." groups=[
"innerNodes",
]]
position = Vector2( 2522, 886 )
script = ExtResource( 12 )
__meta__ = {
"_edit_group_": true
}
nodeColor = "green"

[node name="Sprite" type="AnimatedSprite" parent="greenPort"]
scale = Vector2( 2.5, 2.5 )
frames = SubResource( 166 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="greenPort"]
scale = Vector2( 10, 10 )
shape = SubResource( 167 )

[node name="redPort2" type="Area2D" parent="." groups=[
"outerNodes",
]]
position = Vector2( 2322, 966 )
script = ExtResource( 12 )
__meta__ = {
"_edit_group_": true
}
nodeColor = "red"
nodeRing = "outer"

[node name="Sprite" type="AnimatedSprite" parent="redPort2"]
scale = Vector2( 2.5, 2.5 )
frames = SubResource( 148 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="redPort2"]
scale = Vector2( 10, 10 )
shape = SubResource( 149 )

[node name="greenPort2" type="Area2D" parent="." groups=[
"outerNodes",
]]
position = Vector2( 2526, 1316 )
script = ExtResource( 12 )
__meta__ = {
"_edit_group_": true
}
nodeColor = "green"
nodeRing = "outer"

[node name="Sprite" type="AnimatedSprite" parent="greenPort2"]
scale = Vector2( 2.5, 2.5 )
frames = SubResource( 166 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="greenPort2"]
scale = Vector2( 10, 10 )
shape = SubResource( 167 )

[node name="bluePort2" type="Area2D" parent="." groups=[
"outerNodes",
]]
position = Vector2( 2732, 968 )
script = ExtResource( 12 )
__meta__ = {
"_edit_group_": true
}
nodeColor = "blue"
nodeRing = "outer"

[node name="Sprite" type="AnimatedSprite" parent="bluePort2"]
scale = Vector2( 2.5, 2.5 )
frames = SubResource( 157 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="bluePort2"]
scale = Vector2( 10, 10 )
shape = SubResource( 158 )

[node name="Wire" type="Line2D" parent="."]
modulate = Color( 1, 1, 1, 0.901961 )
z_index = -1
width = 50.0
default_color = Color( 1, 1, 1, 1 )
texture_mode = 2
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 2528.78, 1084.15 )
scale = Vector2( 3.64452, 3.64452 )
frames = SubResource( 168 )
frame = 8
playing = true
